adding empty folders. Should remove this ItemGroup, when the fodlers have classes.

--- a/src/BugHunters.Api/BugHunters.Api.csproj
+++ b/src/BugHunters.Api/BugHunters.Api.csproj
@@ -11,4 +11,10 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Entities\" />
+      <Folder Include="Features\CatchBug\" />
+      <Folder Include="Features\SeeBugCatalogue\" />
+    </ItemGroup>
+
 </Project>
