setting up web app factory for testing

--- a/src/BugHunters.Api/BugHunters.Api.csproj
+++ b/src/BugHunters.Api/BugHunters.Api.csproj
@@ -18,6 +18,10 @@
     </ItemGroup>
 
     <ItemGroup>
+        <InternalsVisibleTo Include="IntegrationTests" />
+    </ItemGroup>
+    
+    <ItemGroup>
       <Folder Include="Features\Bugs\CatchBug\" />
       <Folder Include="Features\Hunters\" />
       <Folder Include="Features\ViewData\SeeBugCatalogue\" />
