--- a/src/BugHunters.Api/BugHunters.Api.csproj
+++ b/src/BugHunters.Api/BugHunters.Api.csproj
@@ -22,6 +22,7 @@
     </ItemGroup>
     
     <ItemGroup>
+      <Folder Include="Entities\Values\Bug\" />
       <Folder Include="Features\Bugs\CatchBug\" />
       <Folder Include="Features\Hunters\" />
       <Folder Include="Features\ViewData\SeeBugCatalogue\" />
