--- a/src/BugHunters.Api/BugHunters.Api.csproj
+++ b/src/BugHunters.Api/BugHunters.Api.csproj
@@ -23,8 +23,7 @@
     
     <ItemGroup>
       <Folder Include="Entities\Values\Bug\" />
-      <Folder Include="Features\Bugs\CatchBug\" />
-      <Folder Include="Features\Hunters\" />
+      <Folder Include="Features\CatchBug\" />
       <Folder Include="Features\ViewData\SeeBugCatalogue\" />
     </ItemGroup>
 
