--- a/src/BugHunters.Api/Properties/launchSettings.json
+++ b/src/BugHunters.Api/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7102;http://localhost:5054",
+      "applicationUrl": "https://localhost:7102;http://localhost:5054;http://192.168.0.249:7103",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
