update Name to DisplayName
Took 9 minutes

--- a/src/BugHunters.Api/BugHunters.Api.csproj
+++ b/src/BugHunters.Api/BugHunters.Api.csproj
@@ -23,6 +23,7 @@
     
     <ItemGroup>
       <Folder Include="Features\AddBug\" />
+      <Folder Include="Features\ChangeDisplayName\" />
     </ItemGroup>
 
 </Project>
